<resources>
    <string name="app_name">TabacoHookah</string>

    <string name="btn_iniciar_pantalla">Iniciar Sesion</string>
    <string name="btn_registrar_pantalla">Registrar</string>
    <string name="btn_iniciar_sesion">Login</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="subir_tabaco">SUBIR TABACO</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="password">Password</string>
    <string name="confirmacion_password">Confirmacion Password</string>
    <string name="email">Email</string>
    <string name="nueva_mezcla">NUEVA MEZCLA</string>
    <string name="marca_1">MARCA 1</string>
    <string name="marca">marca</string>
    <string name="tabaco_1">TABACO 1</string>
    <string name="tabaco">tabaco</string>
    <string name="marca_2">MARCA 2</string>
    <string name="tabaco_2">TABACO 2</string>
    <string name="descripcion">Descripcion</string>
    <string name="todo">TODO</string>
    <string name="nueva_marca">NUEVA MARCA</string>
    <string name="done">Done</string>

</resources>