<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_foto1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/cigarrillo" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="129dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_rv_nombreTabaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tabaco_1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_rv_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca_1" />

        <TextView
            android:id="@+id/txt_rv_nombreTabaco2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tabaco_2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_rv_marca2"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:text="@string/marca_2" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_foto2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/cigarrillo"
        android:contentDescription="@string/todo" />

</LinearLayout>