<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="412dp"
        android:layout_height="534dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginStart="310dp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/red"
        android:text="@string/cerrar_sesion"
        android:onClick="cerrarSesion"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerView">

        <Button
            android:id="@+id/Addbutton"
            android:layout_width="189dp"
            android:layout_height="match_parent"

            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/red"
            android:onClick="irAddTabaco"
            android:text="@string/nueva_mezcla"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Add_Categoria"
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/red"
            android:text="@string/nueva_marca"
            android:textColor="@color/white" />
        android:text="NUEVA MARCA" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>